<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.5.16</version>
        <relativePath/>
    </parent>

    <groupId>fun.commons</groupId>
    <artifactId>token-gateway</artifactId>
    <version>0.6.0</version>
    <packaging>pom</packaging>
    <name>token-gateway</name>
    <description>
        token-gateway 通用模型能力网关 (LLM 同步面 + 任务四模态面).
        分模块方案见 docs/开发文档/01_设计方案.md §9:
        gateway-spi (M0 接口先行) → gateway-core / face-llm / face-task / adapter-* (M1+).
    </description>

    <modules>
        <module>gateway-spi</module>
        <module>gateway-core</module>
        <module>face-llm</module>
        <module>face-task</module>
        <module>task-worker</module>
        <module>demo-control-plane</module>
        <module>token-gateway-spring-boot-starter</module>
        <module>app</module>
    </modules>

    <properties>
        <java.version>17</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <!-- JaCoCo 覆盖率门禁默认线 (LINE), 各模块按实测值覆写; 非生产制品设 0 豁免 -->
        <jacoco.line.min>0.50</jacoco.line.min>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>fun.commons</groupId>
                <artifactId>gateway-spi</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>fun.commons</groupId>
                <artifactId>gateway-core</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>fun.commons</groupId>
                <artifactId>face-llm</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>fun.commons</groupId>
                <artifactId>face-task</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>fun.commons</groupId>
                <artifactId>task-worker</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>fun.commons</groupId>
                <artifactId>token-gateway-spring-boot-starter</artifactId>
                <version>${project.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <!-- 覆盖率: agent + 报告全模块; 门禁阈值 check 见各模块 (verify 阶段生效) -->
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <id>prepare-agent</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>report</id>
                        <phase>test</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>check</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>check</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <rule>
                                    <element>BUNDLE</element>
                                    <limits>
                                        <limit>
                                            <counter>LINE</counter>
                                            <value>COVEREDRATIO</value>
                                            <minimum>${jacoco.line.min}</minimum>
                                        </limit>
                                    </limits>
                                </rule>
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
